# LIPS

./: README.md  compile.py  pyproject.toml
lips/: __main__.py  compile.py  files.py
